--- a/CARTÃO DE VISITA.html
+++ b/CARTÃO DE VISITA.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CARTÃO DE VISITAS.css">
-    <title>Document</title>
+    <title>Cartão de Visitas Lucas</title>
 </head>
 <body>
     <div class="modelo">
@@ -22,3 +22,4 @@
     
 </body>
 </html>
+
